Fix z-index at some places

--- a/app.css
+++ b/app.css
@@ -47,6 +47,7 @@ body.dark {
 main {
   justify-content: center;
   margin: auto;
+  position: relative;
   width: 1000px;
 }
 
@@ -185,6 +186,7 @@ h6 {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  position: relative;
   text-align: center;
   font-size: 1.5rem;
 }
@@ -310,7 +312,6 @@ h6 {
   padding: 0 0.6rem;
   white-space: nowrap;
   font-size: 1rem;
-  z-index: 1;
   transition: opacity var(--transition-duration) var(--transition-ease);
   opacity: 0;
 }
@@ -329,8 +330,12 @@ h6 {
 /* --- Footer --- */
 .footer {
   color: var(--color-light);
-  text-align: center;
   font-size: 0.9rem;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  width: fit-content;
 }
 
 .footer a {
@@ -347,7 +352,6 @@ h6 {
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: -2;
 }
 .dark #particles-js {
   background-color: var(--color-dark);
@@ -433,6 +437,7 @@ h6 {
   height: 140px;
   object-fit: cover;
   object-position: top;
+  position: relative;
   width: 100%;
 }
 
@@ -440,7 +445,6 @@ h6 {
 .portrait-bg-shape {
   position: absolute;
   border-radius: 50%;
-  z-index: -1;
   animation: float 6s ease-in-out infinite alternate;
 }
 
